# Clear

./: .gitignore  README.md  clear.py  crystal.py  format.sh  memtest.sh  test.sh
.vim/syntax/: clr.vim
ClearC/: clr.py  clrc.py
ClearC/clr/: annotations.py  assemble.py  ast.py  astprinter.py  bytecode.py  codegenerator.py  compile.py  constants.py  controlflow.py  core.py  dis.py  errors.py  flowchecker.py  indexer.py  lexer.py  parser.py  printer.py  resolve.py  resolver.py  sequencer.py  tokens.py  trie.py  typechecker.py  types.py  util.py  values.py  visitor.py
ClearC/clr/ast/: compile.py  compiler.py  decl.py  expr.py  expression_nodes.py  index.py  index_annotations.py  name_indexer.py  parse.py  parser.py  parsing.py  resolve.py  return_annotations.py  statement_nodes.py  stmt.py  tree.py  type.py  type_annotations.py  type_nodes.py  type_resolver.py  visitor.py
ClearVM/: CMakeLists.txt  SPEC.md  bytecode.c  bytecode.h  chunk.c  chunk.h  common.h  main.c  memory.c  memory.h  obj.c  obj.h  table.c  table.h  value.c  value.h  vm.c  vm.h
test/: align.clr  decorate.clr  fact.clr  hello.clr  iter.clr  lambda.clr  list.clr  main  main.clr  main.clr.b  main.cpp  main.cr  main.cy  prop.clr  strings.clr  todo.clr
